# kalshi_btc

./: .cursorignore  .env.example  .gitignore  KALSHI_BTC_TICKER_FORMAT.md  README.md  pyproject.toml  requirements.txt  run_dashboard.py  run_volatility_trading.sh  test_btc_trading.py  test_ticker_utils.py  trades.csv
app/: __init__.py  btc_trading.py  cli_dashboard.py  market_search.py  ticker_utils.py  twitter_sentiment.py  utils.py  web_dashboard.py
app/templates/: dashboard.html
oliver/: bitstamp_data_fetcher.py  config.py  monte_carlo_btc.py  predict_price_probability.py  print_volatility.py  test_utils.py  trading_dashboard.py  volatility_trading.py
oliver/data/: __init__.py  price_queue.py  spike_detector.py
oliver/loggers/: __init__.py  trading_logger.py
oliver/trading/: __init__.py  cycle.py  hourly_maintenance.py  market_discovery.py  order_placement.py  pnl_tracker.py  position_sizing.py  prediction.py
