[project]
name = "kalshi-btc"
version = "0.1.0"
description = "Utilities for trading Bitcoin markets on Kalshi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
    "kalshi-python>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::SyntaxWarning:kalshi_python.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


